--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,6 @@
     @apply font-bold text-[56px] leading-[120%];
   }
 
-
   .h1 {
     @apply font-bold text-[44px] leading-[140%] capitalize;
   }
@@ -92,7 +91,6 @@
     @apply font-normal text-[14px] leading-[180%] capitalize;
   }
 
-
   .caption-lg {
     @apply font-normal text-[14px] leading-[180%] capitalize;
   }
@@ -103,19 +101,80 @@
     @apply font-normal text-[10px] leading-[180%] capitalize;
   }
 
-
-  .button-lg{
+  .button-lg {
     @apply font-bold text-[16px] leading-[180%] capitalize;
   }
-  .button-sm{
-    @apply font-medium text-[14px] leading-[24px] capitalize
+  .button-sm {
+    @apply font-medium text-[14px] leading-[24px] capitalize;
   }
 
+  .overline-lg {
+    @apply font-medium text-[16px] leading-[24px] capitalize;
+  }
+  .overline-sm {
+    @apply font-bold text-[12px] leading-[21px] tracking-[0.8px];
+  }
+}
 
-  .overline-lg{
-    @apply font-medium text-[16px] leading-[24px] capitalize
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-pagination-bullet {
+  width: 4px !important;
+  height: 4px !important;
+
+  /* Neutral/ADADAD */
+  background-color: #757575 !important;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+
+  /* Inside auto layout */
+  flex: none;
+  /* order: 4;
+  flex-grow: 1; */
+}
+.swiper-pagination-bullet-active {
+  width: 8px !important;
+  height: 8px !important;
+  background-color: #417f56 !important;
+  /* box-shadow: 0px 0px 1px 3px #e5f2e9; */
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-pagination-bullet-active {
+    width: 15px !important;
+    height: 15px !important;
   }
-  .overline-sm{
-    @apply font-bold text-[12px] leading-[21px] tracking-[0.8px]
+  .swiper-pagination-bullet {
+    width: 8px !important;
+    height: 8px !important;
   }
+}
+
+.prev{
+  width: 2em;
+  height: 2em;
+  color: white;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  z-index: 2;
+  display: flex;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.next{
+  width: 2em;
+  height: 2em;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 2em;
+  z-index: 2;
+  display: flex;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
 }
