--- a/app/globals.css
+++ b/app/globals.css
@@ -118,11 +118,16 @@
     @apply font-bold text-[12px] leading-[21px] tracking-[0.8px];
   }
 }
+
 nav[aria-label="Main"] > div{
   width: 133% !important;
 }
 nav[aria-label="Main"] > div > div{
   border: none !important;
+}
+
+.leaflet-container{
+  height: 100%;
 }
 
 .swiper-slide img {
