complet /user/profile with responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -208,3 +208,6 @@ nav[aria-label="Main"] > div > div{
 .mySwiper .swiper-slide-thumb-active .transparentDiv{
   z-index: 0 !important;
 }
+.rmdp-container {
+  width: 100%;
+}
